--- a/king-vs-poo/package.json
+++ b/king-vs-poo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "boardgame.io": "^0.31.4",
+    "esm": "^3.2.22",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
