--- a/Boardgame/package.json
+++ b/Boardgame/package.json
@@ -2,6 +2,9 @@
   "name": "boardgame",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.12.0"
+  },
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
