--- a/Boardgame/package.json
+++ b/Boardgame/package.json
@@ -25,7 +25,8 @@
     "url-join": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+
+    "start": "yarn start & yarn server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
