--- a/Boardgame/package.json
+++ b/Boardgame/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
 
-    "start": "yarn start",
+    "start": "yarn server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
