--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url-join": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start & yarn server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
